--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       <hr/>
       <div>
       
-      <form action="upload" method="post" enctype="multipart/form-data">
+      <form action="uploadVideo" method="post" enctype="multipart/form-data">
         <input type="file" multiple="" name="file[]" class="span3" /><br />
         <input type="submit" value="Upload"  class="span2">
       </form>
